kubernetes/db-mysql.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: db 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db 
  template:
    metadata:
      name: db
      labels:
        app: db 
    spec:
      containers:
      - name: db 
        image: mysql 
        ports:
        - containerPort: 3306 
---
apiVersion: v1
kind: Service 
metadata:
  name: db-svc 
spec: 
  selector:
    app: db
  ports:
  - port: 3306
    protocol: TCP 
    targetPort: 3306
