kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: java-ingress
  annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: java-svc
            port: 
              number: 80
